DEFEDIT-1584 Add clj-async-profiler to project dev profile & helpers